# yourcast

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
frontend/: README.md  api.py  index.html
frontend/public/: podcast_images.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AudioPlayer.tsx  DynamicHeadline.tsx  EpisodeCard.tsx  EpisodeSelectionDialog.tsx  HostChip.tsx  HostChipsContainer.tsx  Navbar.tsx  PlatformIcons.tsx  WaveAnimation.css  WaveAnimation.tsx
frontend/src/components/ui/: button.tsx  card.tsx  input.tsx  select.tsx
frontend/src/pages/: CustomEpisode.tsx  Episode.tsx  Host.tsx  Index.tsx
frontend/src/utils/: api.ts
yourcast/api/: api.py
yourcast/assets/: episode_summaries.json  episode_urls.json  hosts_since_2025_start.json  podcast_images.json  podcast_urls.json  podcasts_from_2025.html
yourcast/parser/: episode_parser.py
yourcast/scraper/: crawler.py  get_podcast_links.py  run_scrape.py
yourcast/tools/: helpers.py  keywords.py  llm_helpers.py
