[project]
name = "yourcast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coloredlogs>=15.0.1",
    "duckduckgo-search>=8.0.1",
    "fastapi[standard]>=0.115.12",
    "fastembed>=0.6.1",
    "gtts>=2.5.4",
    "markdownify>=1.1.0",
    "openai>=1.76.0",
    "pillow>=11.2.1",
    "pinecone>=6.0.2",
    "playwright>=1.51.0",
    "playwright-stealth>=1.0.6",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
    "python-slugify>=8.0.4",
    "requests>=2.32.3",
    "setuptools>=79.0.1",
    "tenacity>=9.1.2",
]

[tool.ruff]
line-length = 160
